# quakified-terminal

./: .gitignore  LICENSE.md  README.md  SPEC.md  justfile  metadata.json
.github/workflows/: release.yml
code/: main.js
contents/code/: main.js
contents/config/: main.xml
contents/ui/: config.ui
previewer/: main.py  pyproject.toml
