[project]
name = "kwin-quake"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarun Rattanasiri",email = "midnight_w@gmx.tw"}
]
requires-python = ">=3.14"
dependencies = [
    "pyqt6 (>=6.10.2,<7.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

